--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "fablr",
   "version": "1.0.0",
   "description": "Facebook Page Management",
-  "main": "index.js",
+  "main": "./server/index.js",
   "scripts": {
+    "deploy": "npm build | npm start",
+    "start": "node ./server/index.js",
+    "build": "webpack --config ./webpack.config.js --progress --colors",
+    "dev": "webpack-dev-server --progress --colors --port 8090",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +19,36 @@
   "bugs": {
     "url": "https://github.com/lriveras/fablr/issues"
   },
-  "homepage": "https://github.com/lriveras/fablr#readme"
+  "homepage": "https://github.com/lriveras/fablr#readme",
+  "dependencies": {
+    "compression": "^1.6.2",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "material-ui": "^0.16.6",
+    "react": "^15.4.1",
+    "react-d3": "^0.4.0",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "react-redux-classconnect": "^1.0.2",
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "whatwg-fetch": "^2.0.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "enzyme": "^2.7.0",
+    "eslint": "^3.12.2",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.8.0",
+    "file-loader": "^0.9.0",
+    "jsx-loader": "^0.13.2",
+    "react-addons-test-utils": "^15.4.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
+  }
 }
