--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Facebook Page Management",
   "main": "./server/index.js",
   "scripts": {
-    "deploy": "npm build | npm start",
+    "deploy": "npm install && npm build && npm start",
+    "dev-deploy": "npm build && npm start",
     "start": "node ./server/index.js",
     "build": "webpack --config ./webpack.config.js --progress --colors",
     "dev": "webpack-dev-server --progress --colors --port 8090",
@@ -32,7 +33,6 @@
     "react-d3": "^0.4.0",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
-    "react-redux-classconnect": "^1.0.2",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
