--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Facebook Page Management",
   "main": "./server/index.js",
   "scripts": {
-    "deploy": "npm install && npm build && npm start",
-    "dev-deploy": "npm build && npm start",
+    "deploy": "npm install && npm run build && npm start",
+    "dev-deploy": "npm run build && npm start",
     "start": "node ./server/index.js",
     "build": "webpack --config ./webpack.config.js --progress --colors",
     "dev": "webpack-dev-server --progress --colors --port 8090",
