--- a/package.json
+++ b/package.json
@@ -25,32 +25,33 @@
     "node": "6.9.2"
   },
   "dependencies": {
-    "compression": "^1.6.2",
-    "cors": "^2.8.1",
-    "express": "^4.14.0",
-    "material-ui": "^0.16.6",
-    "react": "^15.4.1",
-    "react-d3": "^0.4.0",
-    "react-dom": "^15.4.1",
-    "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "whatwg-fetch": "^2.0.1",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "compression": "^1.6.2",
+    "cors": "^2.8.1",
     "enzyme": "^2.7.0",
     "eslint": "^3.12.2",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.8.0",
+    "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "jsx-loader": "^0.13.2",
+    "material-ui": "^0.16.6",
+    "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
+    "react-d3": "^0.4.0",
+    "react-dom": "^15.4.1",
+    "react-facebook-login": "^3.4.2",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
