--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "flexboxgrid": "^6.3.1",
     "jsx-loader": "^0.13.2",
     "material-ui": "^0.16.6",
+    "rd3": "^0.7.4",
     "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-d3": "^0.4.0",
@@ -53,6 +54,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^0.20.2",
     "redux": "^3.6.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
