--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Facebook Page Management",
   "main": "./server/index.js",
   "scripts": {
-    "deploy": "npm install && npm run build && npm start",
-    "dev-deploy": "npm run build && npm start",
-    "start": "node ./server/index.js",
+    "clean": "rm -rf node_modules/ && rm server/static/build/*",
     "build": "webpack --config ./webpack.config.js --progress --colors",
-    "dev": "webpack-dev-server --progress --colors --port 8090",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/helpers/browser.js server/static/build/tests.fablr.js",
+    "start": "node ./server/index.js",
+    "deploy": "npm run clean && npm install && npm run build && npm test && npm start",
+    "reload": "npm run build && npm start"
   },
   "repository": {
     "type": "git",
@@ -29,26 +29,30 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.20.0",
+    "babel-preset-airbnb": "^2.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
+    "enzyme-redux": "^0.1.6",
     "eslint": "^3.12.2",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.8.0",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "flexboxgrid": "^6.3.1",
+    "jsdom": "^9.9.1",
     "jsx-loader": "^0.13.2",
     "material-ui": "^0.16.6",
-    "rd3": "^0.7.4",
-    "react": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-d3": "^0.4.0",
-    "react-dom": "^15.4.1",
+    "mocha": "^3.2.0",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-facebook-login": "^3.4.2",
     "react-flexbox-grid": "^0.10.2",
     "react-redux": "^5.0.1",
@@ -56,6 +60,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "recharts": "^0.20.2",
     "redux": "^3.6.0",
+    "redux-test-utils": "^0.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
@@ -73,6 +78,7 @@
     "eslint-plugin-react": "^6.8.0",
     "file-loader": "^0.9.0",
     "jsx-loader": "^0.13.2",
+    "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
