deploy commant fix

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config ./webpack.config.js --progress --colors",
     "test": "mocha test/helpers/browser.js server/static/build/tests.fablr.js",
     "start": "node ./server/index.js",
-    "deploy": "npm run clean && npm install && npm run build && npm test && npm start",
+    "deploy": "npm install && npm run build && npm test && npm start",
     "reload": "npm run build && npm start",
     "reloadtest": "npm run build && npm test"
   },
